--- a/Hussein.html
+++ b/Hussein.html
@@ -1,4 +1,13 @@
-<!DOCTYPE htmle > 
+<!DOCTYPE html>
 <html>
-    <head> :HUS: </head>
+<head>
+<title >HUS.com</title>  
+</head>
+<!-- All what i will write here will not opend in net becuse it is comments-->
+<body>
+<h1 style="color: blue; font-size: 600%;"><strong><pre>       HUS.com  </pre></strong> </h1>
+<hr/>
+<p1 style="color:brown"and style="font-size:large"><em>comming soon...........................................................................
+<hr/>
+</body>
 </html>
